plugins/kotlin/idea/tests/testData/multiplatform/incompleteActualization/jvmAndJs/jvmAndJs.kt
package foo

expect class <!LINE_MARKER("descr='Has actuals in js module'"), NO_ACTUAL_FOR_EXPECT!>ExpectInMiddleActualInJsOnly<!>
expect class <!LINE_MARKER("descr='Has actuals in jvm module'"), NO_ACTUAL_FOR_EXPECT!>ExpectInMiddleActualInJvmOnly<!>
